package pattern_examples.bridge_pattern_example;

//implementor
public interface Make {
    void setMake();
}
