@startuml

title __BRIDGE_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.bridge_pattern_example {
    abstract class pattern_examples.bridge_pattern_example.Car {
        + Car()
        ~ showDetails()
        {abstract} ~ showType()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Coupe {
        + Coupe()
        ~ showType()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Hatchback {
        + Hatchback()
        ~ showType()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Kia {
        + setMake()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    interface pattern_examples.bridge_pattern_example.Make {
        {abstract} + setMake()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Mresedes {
        + setMake()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Sedan {
        + Sedan()
        ~ showType()
    }
  }
  

  namespace pattern_examples.bridge_pattern_example {
    class pattern_examples.bridge_pattern_example.Skoda {
        + setMake()
    }
  }
  

  pattern_examples.bridge_pattern_example.Car o-- pattern_examples.bridge_pattern_example.Make : make
  pattern_examples.bridge_pattern_example.Coupe -up-|> pattern_examples.bridge_pattern_example.Car
  pattern_examples.bridge_pattern_example.Hatchback -up-|> pattern_examples.bridge_pattern_example.Car
  pattern_examples.bridge_pattern_example.Kia .up.|> pattern_examples.bridge_pattern_example.Make
  pattern_examples.bridge_pattern_example.Mresedes .up.|> pattern_examples.bridge_pattern_example.Make
  pattern_examples.bridge_pattern_example.Sedan -up-|> pattern_examples.bridge_pattern_example.Car
  pattern_examples.bridge_pattern_example.Skoda .up.|> pattern_examples.bridge_pattern_example.Make


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
